--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,20 +3,17 @@ server:
 
 spring:
   application:
-    name: SpringBoot-zys
-#  elasticsearch:
-#     rest:
-#      uris: [192.168.109.130:9200]
-#  使用springdata模板使用以下配置
-#  data:
-#    elasticsearch:
-#      cluster-name: docker-cluster
-#      cluster-nodes: 192.168.0.128:9300
+    name: SpringBootTemplate
+  elasticsearch:
+    rest:
+      uris: [ 192.168.154.128:9200,192.168.154.129:9200,192.168.154.130:9200 ]
+      connection-timeout: 10000
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/zys?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.154.128:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 #  kafka:
 #    bootstrap-servers: 192.168.0.241:9092,192.168.0.242:9092,192.168.0.243:9092
 #    #生产者的配置，大部分我们可以使用默认的，这里列出几个比较重要的属性
@@ -44,29 +41,10 @@ spring:
 #      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 #      #在/usr/local/etc/kafka/consumer.properties中有配置
 #      group-id: group-test
-  redis:
-    host: 192.168.75.128
-    port: 6379
-    password: 123456
-#
-#
-#eureka:
-#  instance:
-#    prefer-ip-address: true #注册服务的时候使用ip地址
-#    instance-id: SpringBoot-zys
-#  client:
-#    service-url:
-#     defaultZoneL: http://192.168.0.42:8761/eureka/
-
-info:
-  app.name: SpringBoot-zys
-  company.name: www.zys.com
-  build.artifactId: SpringBoot
-
 
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   type-aliases-package: com.zys.dao
   configuration:
-      map-underscore-to-camel-case: true
-      call-setters-on-nulls: true #返回值map时，显示为null的字段
+    map-underscore-to-camel-case: true
+    call-setters-on-nulls: true #返回值map时，显示为null的字段
