--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <elasticsearch.version>7.8.0</elasticsearch.version>
+        <redis.version>3.7.0</redis.version>
     </properties>
     <dependencies>
         <dependency>
@@ -29,8 +30,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-<!--            依赖范围：test测试类中可以使用不参与打包、runtime只参与打包代码中 无法/不使用例如jdbc、mysql驱动
-                provided代码中测试中可以使用不参与打包-->
+            <!--            依赖范围：test测试类中可以使用不参与打包、runtime只参与打包代码中 无法/不使用例如jdbc、mysql驱动
+                            provided代码中测试中可以使用不参与打包-->
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-<!--            <optional>true</optional> true项目之间不用传递依赖，例如本项目被其他项目作为依赖引用，不用传递此依赖上级引用不会看到、用到此依赖-->
+            <!--            <optional>true</optional> true项目之间不用传递依赖，例如本项目被其他项目作为依赖引用，不用传递此依赖上级引用不会看到、用到此依赖-->
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -50,10 +51,10 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.kafka</groupId>-->
-        <!--<artifactId>spring-kafka</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -121,7 +122,11 @@
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
             <version>${elasticsearch.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${redis.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
